rust_writer_procedural/tests/ui/finder_fails_if_crate_implementor_doesnt_implement_to_find.rs
// SPDX-License-Identifier: GPL-3.0

use rust_writer::ast::{finder::ToFind, implementors::ItemToImpl, mutator::EmptyMutator};
use rust_writer_procedural::finder;
use syn::visit::Visit;

// Use EmptyMutator as it implements Clone, so the only fail here is that ToFind isn't implemented
#[finder(ItemToImpl<'a>, EmptyMutator)]
struct SomeStruct;

fn main() {}
